# vigil

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
infrastructure/config/detection-rules/: siem.rules.yml
infrastructure/config/elastic/: policy_template.json
infrastructure/config/elasticsearch/: elasticsearch.yml
infrastructure/config/kibana/: kibana.yml
infrastructure/config/logstash/: pipelines.yml
infrastructure/k8s/eck/: elasticsearch.yaml  fleet-server.yaml  gcs-snapshot-repo.yaml  ilm-policy.yaml  kibana.yaml
infrastructure/k8s/services/: alert-gateway.yaml  (+8 more)
infrastructure/scripts/: defender_helper.ps1  install_sysmon.ps1
services/alert-gateway/: Dockerfile  go.mod
services/bff/: Dockerfile  go.mod
services/case-service/: Dockerfile  go.mod
services/detection-service/: Dockerfile  go.mod
services/enrichment-service/: Dockerfile  pyproject.toml
services/llm-orchestrator/: pyproject.toml
services/llm-orchestrator/app/: main.py  orchestrator.py  triage_schema.py
services/llm-orchestrator/app/audit/: __init__.py  logger.py
services/llm-orchestrator/app/provider/: __init__.py  base.py  mock.py  vertex.py
services/llm-orchestrator/tests/: test_mock_provider.py
services/masking-service/: pyproject.toml
services/masking-service/app/: main.py
services/masking-service/app/masker/: __init__.py  masker.py
services/masking-service/app/models/: __init__.py  masking.py
services/masking-service/tests/: test_masker.py
(+48 files in other folders)
